--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,9 @@ server:
     context-path: /api
 
 
+app:
+  jwt:
+    key: 5pAq6zRyX8bC3dV2wS7gN1mK9jF0hL4tUoP6iBvE3nG8xZaQrY7cW2fA
+    algorithm: HS256
+    issuer: http://localhost:8080
+    expiresIn: 6000
