--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.3'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.3.2'
+    id 'io.spring.dependency-management' version '1.1.6'
 
 }
 
@@ -9,14 +9,17 @@ group = 'org.invoice'
 version = '1.0-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21'
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
+
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
-    all {
+    configureEach {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
 }
@@ -39,7 +42,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-gson:0.11.5'
 
-    implementation 'com.google.api-client:google-api-client:2.3.0'
+    implementation 'com.google.api-client:google-api-client:2.7.0'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
